<resources>
    <string name="app_name">Biodiversity</string>
    <string name="title_activity_guest_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="your_user_name">Tên đăng nhập</string>
    <string name="your_password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="create_account">Tạo tài khoản mới</string>
    <string name="sign_up_user_name">Tên đăng nhập</string>
    <string name="sign_up_password">Mật khẩu</string>
    <string name="sign_up_repeat_password">Xác nhận mật khẩu</string>
    <string name="sign_up_first_name">Họ tên</string>
    <string name="sign_up_address">Địa chỉ</string>
    <string name="sign_up_phoneNumber">Số điện thoại</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_birthday">Ngày sinh</string>
    <string name="logoUED">logoUED</string>
    <string name="bt_SignUp">Đăng ký</string>
    <string name="title_activity_guest_main">GuestMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ImageUser">Chà Vá Chân Nâu</string>
    <string name="emailUser">severanimal@gmail.com</string>

    <!-- Messages login page -->
    <!--<string name="host_name">http://192.168.1.20:8081</string>-->
    <string name="host_name">http://d50607de.ngrok.io</string>
    <string name="check_internet">Vui lòng kiểm tra kết nối internet</string>
    <string name="valid_empty_username_pass">Vui lòng nhập đủ Username và password</string>
    <string name="valid_password">password từ 6 đến 21 ký tự và không có ký tự đặc biệt</string>
    <string name="switchRole_manager">Xin lỗi, chưa có chức năng cho manager</string>
    <string name="switchRole_admin">Xin lỗi, chưa có chức năng cho admin</string>
    <string name="mistake_username_password">Tài khoản hoặc mật khẩu không đúng!</string>
    <string name="error_getAPI">Error cannot get API!</string>

    <!-- Messages register page -->
    <string name="confirm_password">Xác nhận lại mật khẩu</string>
    <string name="valid_username">Username từ 3 đến 30 ký tự và không chứa ký tự đặc biệt</string>
    <string name="valid_string_name">Không rỗng và không chứa ký tự đặc biệt</string>
    <string name="valid_string_phone">Mời nhập số điện thoại</string>
    <string name="valid_empty_email">Mời nhập email</string>
    <string name="valid_empty_birthday">Mời nhập ngày sinh</string>
    <string name="valid_format_email">Nhập đúng định dạng email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello library species fragment</string>
    <string name="reset_password">Quên mật khẩu?</string>
    <string name="reset_password_enter_email">Nhập địa chỉ email mà bạn đã đăng ký với tài khoản để gửi yêu cầu thiết lâp lại mật khẩu</string>
    <string name="bt_reset_password">Tạo mới mật khẩu</string>
    <string name="back"><![CDATA[<< quay lại]]></string>


    <string name="nameSpecies">ABC</string>
    <string name="error_get_data_of_list_species">Không có dữ liệu</string>
    <string name="title_activity_member_main">MemberMainActivity</string>
    <string name="search">Search</string>
    <string name="nav_title_map">Bản đồ phân bố</string>
    <string name="nav_title_library_species">Thư viện loài</string>
    <string name="nav_title_contact">Liên hệ</string>
    <string name="nav_title_login">Đăng nhập</string>
    <string name="nav_title_search">Tìm kiếm</string>
    <string name="nav_title_searchByImage">Hình ảnh</string>
    <string name="nav_title_searchByKeWord">Từ khóa</string>
    <string name="nav_title_logout">Đăng xuất</string>
    <string name="nav_title_profile">Thông tin cá nhân</string>
    <string name="title_activity_expert_main">ExpertMainActivity</string>
    <string name="nav_title_approve">Cần phê duyệt</string>
    <string name="nav_title_supplyInformation">Báo cáo</string>

    <string name="txt_title_user_account">Thông tin tài khoản</string>
    <string name="profile_changePass">Thay đổi mật khẩu</string>
    <string name="ic_home">ic_home</string>
    <string name="profile_done">Done</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="new_password_confirm">Xác nhận lại mật khẩu mới</string>
    <string name="update_successful">Cập nhật thành công!</string>
    <string name="failed_access_token">Đã hết thời lượng sử dụng lượt truy cập. Vui lòng đăng nhập lại!</string>
    <string name="traits">Đặc điểm chung</string>
    <string name="textDiscover">Phát hiện bởi</string>
    <string name="filter">filter</string>
    <string name="valid_email_empty">Mời nhập email</string>

</resources>
