<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.duyenbui.qldv.activity.guest.ForgotPasswordActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_ued"
        android:id="@+id/imageView2"
        android:contentDescription="@string/logoUED"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/imageView2"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textColor="@color/colorTextGreen"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/title_reset"
        android:textAlignment="center"
        android:text="@string/reset_password_enter_email"/>

    <TextView
        android:id="@+id/titleEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/textEmail"
        android:text="@string/sign_up_email"/>

    <EditText
        android:id="@+id/emailResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleEmail"
        android:hint="@string/emailUser"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/bt_resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSignUp"
        android:layout_marginLeft="@dimen/marginSignUp"
        android:layout_marginRight="@dimen/marginSignUp"
        android:layout_below="@id/emailResetPassword"
        android:background="@color/colorGreen"
        android:textColor="@color/colorWhite"
        android:text="@string/bt_reset_password"/>

    <Button
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt_resetPassword"
        android:background="@null"
        android:text="@string/back"
        android:textSize="10dp"/>

</RelativeLayout>
