<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_guest_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.duyenbui.qldv.activity.guest.GuestSignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_user_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_sign_up"
        android:id="@+id/txt_username"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_sign_up"
        android:inputType="textPassword"
        android:id="@+id/txt_password1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_repeat_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_sign_up"
        android:inputType="textPassword"
        android:id="@+id/txt_password2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_first_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_sign_up"
        android:id="@+id/txt_first_name"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_last_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_sign_up"
        android:id="@+id/txt_last_name"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_sign_up"
        android:id="@+id/txt_email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_birthday" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_sign_up"
        android:id="@+id/txt_birthday"
        android:inputType="date"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            android:textColor="@color/colorWhite"
            android:text="Reset"/>

        <Button
            android:id="@+id/bt_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeftLogin"
            android:layout_toRightOf="@+id/bt_clear"
            android:background="@color/colorGreen"
            android:textColor="@color/colorWhite"
            android:text="Sign up"/>

    </RelativeLayout>

</LinearLayout>
