<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.duyenbui.qldv.activity.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGreen"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:fitsSystemWindows="true"
                tools:elevation="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    tools:contentScrim="?attr/colorPrimary"
                    tools:expandedTitleMarginEnd="64dp"
                    tools:expandedTitleMarginStart="48dp"
                    tools:expandedTitleTextAppearance="@android:color/transparent"
                    tools:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/backdrop"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:fitsSystemWindows="true"
                            android:scaleType="centerCrop"
                            tools:layout_collapseMode="parallax" />

                        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profile_image_user"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_horizontal"
                            android:src="@drawable/vot_cha_va1"
                            app:border_color="#FF000000" />

                    </RelativeLayout>

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        tools:layout_collapseMode="pin"
                        tools:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                </android.support.design.widget.CollapsingToolbarLayout>

            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite"
                android:elevation="3dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/your_user_name" />

                <EditText
                    android:id="@+id/profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/app_name"
                    android:textColor="@color/colorTextGray"
                    android:enabled="false"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_email" />

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/emailUser"
                    android:textColor="@color/colorTextGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_pen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/ic_home"
                        android:src="@drawable/ic_create_green_400_24dp" />

                    <TextView
                        android:id="@+id/profile_changePassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/profile_changePass"
                        android:textColor="@color/colorTextGray"
                        android:textSize="17sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite"
                android:elevation="3dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/sign_up_first_name" />

                <EditText
                    android:id="@+id/profile_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/colorTextGray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_address" />

                <EditText
                    android:id="@+id/profile_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/colorTextGray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_phoneNumber" />

                <EditText
                    android:id="@+id/profile_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text=""
                    android:textColor="@color/colorTextGray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_birthday" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="9"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/profile_birthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:inputType="date"
                        android:enabled="false"
                        android:textColor="@color/colorTextGray" />

                    <ImageButton
                        android:id="@+id/bt_Date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingRight="@dimen/padding_text"
                        android:paddingLeft="@dimen/padding_text"
                        android:src="@drawable/ic_event_green_400_24dp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorWhite"
                android:elevation="3dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:id="@+id/ic_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/ic_home"
                    android:src="@drawable/ic_home_green_400_24dp" />

                <TextView
                    android:id="@+id/bt_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/nav_title_logout"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
